<resources>
    <string name="app_name">EMTestTask</string>
    <string name="hotels_string">Отели</string>
    <string name="air_tickets_string">Авиабилеты</string>
    <string name="shorter_string">Короче</string>
    <string name="subscription_string">Подписки</string>
    <string name="profile_string">Профиль</string>
    <string name="search_air_tickets_text">Поиск дешевых авиабилетов</string>
    <string name="to_Turkey">Куда - Турция</string>
    <string name="from_Moscow">Откуда - Москва</string>
    <string name="fly_musically">Музыкально отлететь</string>
    <string name="phuket">Пхукет</string>
    <string name="sochi">Сочи</string>
    <string name="istanbul">Стамбул</string>
    <string name="popular_destination">Популярное направление</string>
    <string name="price_example">от 22 264 Р</string>
    <string name="country_example">Будапешт</string>
    <string name="star_example">Die Antwood</string>
    <string name="direct_flights">Прямые рейсы</string>
    <string name="hot_tickets">Горячие билеты</string>
    <string name="holidays">Выходные</string>
    <string name="whereever">Куда угодно</string>
    <string name="difficult_way">Сложный маршрут</string>
    <string name="watch_all_tickets">Посмотреть все билеты</string>
    <string name="subscribe_for_price">Подписка на цену</string>
    <string name="filter">Фильтр</string>
    <string name="price_schedule">График цен</string>
    <string name="clean">clean</string>
    <string name="return_back">Вернуться на прошлый экран</string>
    <string name="plug_text">Вы перешли сюда с %s</string>
    <string name="back">обратно</string>
    <string name="filters">Фильтры</string>
    <string name="example_of_pass_count_and_class">1, эконом</string>
    <string name="ticket_price">%s ₽</string>
    <string name="way_time">%sч в пути</string>
    <string name="without_transfers">/ Без пересадок</string>
    <string name="time">%s — %s</string>
    <string name="badge">Без пересадок</string>
    <string name="direction">%s — %s</string>
    <string name="date_and_count">%s, %s пассажир</string>
    <string name="close">close</string>
</resources>