<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/airTicketsFragment"
        android:title="@string/air_tickets_string"
        android:icon="@drawable/ic_air_tickets" />
    <item android:id="@+id/hotelsFragment"
        android:title="@string/hotels_string"
        android:icon="@drawable/ic_hotels" />
    <item android:id="@+id/shorterFragment"
        android:title="@string/shorter_string"
        android:icon="@drawable/ic_shorter" />
    <item android:id="@+id/subscriptionFragment"
        android:title="@string/subscription_string"
        android:icon="@drawable/ic_subscription" />
    <item android:id="@+id/profileFragment"
        android:title="@string/profile_string"
        android:icon="@drawable/ic_profile" />
</menu>