<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/grey2">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_close_dialog" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardBackgroundColor="@color/grey3"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_from_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_plane"
                android:drawablePadding="8dp"
                android:fontFamily="@font/sf_pro_display_regular"
                android:hint="@string/from_Moscow"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="Минск"
                android:digits="абвгдеёжзийклмнопрстуфхцчшщьыъэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЬЫЪЭЮЯ "
                android:imeOptions="actionGo"
                android:inputType="text"
                android:singleLine="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/grey4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_to_dialog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="9"
                    android:autofillHints="none"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:digits="абвгдеёжзийклмнопрстуфхцчшщьыъэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЬЫЪЭЮЯ "
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="11dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:hint="@string/to_Turkey"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:singleLine="true"/>

                <ImageView
                    android:id="@+id/ic_clean"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/clean"
                    android:src="@drawable/ic_clean" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <LinearLayout
            android:id="@+id/layout_difficult_way"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:background="@drawable/icon_background"
                android:backgroundTint="@color/special_green"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/iv_difficult_way"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/ic_difficult_way" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/difficult_way"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_wherever"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:background="@drawable/icon_background"
                android:backgroundTint="@color/blue"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/iv_wherever"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/ic_wherever" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_wherever"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/wherever"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_holidays"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:background="@drawable/icon_background"
                android:backgroundTint="@color/dark_blue"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/iv_holiday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/ic_holiday" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/holidays"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_hot_tickets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:background="@drawable/icon_background"
                android:backgroundTint="@color/red2"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/iv_hot_tickets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/ic_hot_tickets" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/hot_tickets"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey3"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_istanbul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_square_for_small_photo"
                    android:clipToOutline="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/istanbul" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_istanbul"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_display_medium"
                        android:text="@string/istanbul"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_display_semibold"
                        android:text="@string/popular_destination"
                        android:textColor="@color/grey5"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/grey4" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_square_for_small_photo"
                    android:clipToOutline="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sochi" />

                <LinearLayout
                    android:id="@+id/layout_sochi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_sochi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_display_medium"
                        android:text="@string/sochi"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_display_semibold"
                        android:text="@string/popular_destination"
                        android:textColor="@color/grey5"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/grey4" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_square_for_small_photo"
                    android:clipToOutline="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/phuket" />

                <LinearLayout
                    android:id="@+id/layout_phuket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_phuket"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_display_medium"
                        android:text="@string/phuket"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_display_semibold"
                        android:text="@string/popular_destination"
                        android:textColor="@color/grey5"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="8dp"
                android:background="@color/grey4" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>